<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tic-Tac-Toe</string>
    <string name="first_human">Tu vas primero.</string>
    <string name="turn_human">Tu turno.</string>
    <string name="turn_computer">Turno de Android.</string>
    <string name="result_tie">Empate!.</string>
    <string name="result_human_wins">Tu ganas!</string>
    <string name="result_computer_wins">Android gana!</string>
    <string name="difficulty_choose">Escoge la dificultad:</string>
    <string name="difficulty_easy">Facil</string>
    <string name="difficulty_harder">Medio</string>
    <string name="difficulty_expert">Dificil</string>
    <string name="quit_question">Seguro?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="human">Tú</string>
    <string name="ties">Empate</string>
    <string name="android">Android</string>
    <string name="pref_title">Color Grid</string>
    <string name="nickname">Nick</string>
    <string name="join">Unirse</string>
    <string name="create">Crear nuevo</string>
</resources>
