<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/info_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/information"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="info"
                android:textSize="30sp" />

        </TableRow>
    </TableLayout>

    <edu.harding.tictactoe.BoardView
        android:id="@+id/board"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp" />


    <TableLayout
        android:id="@+id/score_grid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp">>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/human"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="left"
                android:text="@string/human"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/ties"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="@string/ties"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/android"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="right"
                android:text="@string/android"
                android:textAlignment="center"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/countHuman"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="left"
                android:text="0"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/countTies"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="0"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/countAndroid"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="0"
                android:textAlignment="center"
                android:textSize="30sp" />
        </TableRow>
    </TableLayout>

</LinearLayout>
